refactor and a bunch of impl

--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -15,6 +15,7 @@ gloo-timers = { version = "0.3.0", features = ["futures"] }
 serde = "1.0.219"
 thiserror = "2.0.16"
 regex = "1.11.2"
+fixedbitset = "0.5.7"
 
 [features]
 default = ["csr"]
