--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -11,11 +11,10 @@ leptos_meta.workspace = true
 leptos_router.workspace = true
 
 reqwasm = "0.5.0"
-gloo-timers = { version = "0.3.0", features = ["futures"] }
 serde = "1.0.219"
 thiserror = "2.0.16"
 regex = "1.11.2"
-fixedbitset = "0.5.7"
+thaw = { version = "0.5.0-beta", features = [ "csr" ] }
 
 [features]
 default = ["csr"]
